--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   script( type="text/javascript", src="/javascripts/circuit.js" )
   link( type="text/css", rel="stylesheet", href="/stylesheets/gui.css" )
   link( type="text/css", rel="stylesheet", href="/stylesheets/public.css" )
-  include hack
+  include navbar
 
 
 
